--- a/YouTube.html
+++ b/YouTube.html
@@ -122,8 +122,8 @@
 
 <body>
     <div id="selectFile">
-        <h1>select the hits file</h1>
-        <input type="file" id="hits" placeholder="Choose JSON File">
+        <h1>Please select a file</h1>
+        <input style="margin-left: 165px; color: transparent;" type="file" id="hits"/>
     </div>
     <section hidden>
         <div>
@@ -133,11 +133,11 @@
                         <th>Channel</th>
                         <th style="width: 8%">Subscribers</th>
                         <th>Videos</th>
-                        <th>View Count</th>
-                        <th style="width: 12%">Monitized</th>
+                        <th>Views</th>
+                        <th style="width: 12%">Monetised</th>
                         <th style="width: 12%">Redirects</th>
                         <th>Badge</th>
-                        <th>External ID</th>
+                        <th>Channel ID</th>
                         <th>Description</th>
                     </tr>
                 </thead>
