--- a/notepad.html
+++ b/notepad.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-	<title>Type Here</title>
+	<title>Notepad</title>
 	
 	<style type="text/css">
 	@font-face { font-family: Whitney; font-weight: 400; src: url(https://discordapp.com/assets/e8acd7d9bf6207f99350ca9f9e23b168.woff) format("woff") }
@@ -41,7 +41,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 </head>
 <body>
 
-  <textarea type="text" id="content" placeholder="Start typing. Simple as that." autofocus="true"></textarea>
+  <textarea type="text" id="content" placeholder="Seed" autofocus="true"></textarea>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
 <script>
