--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 <head>
   <meta charset="UTF-8">
-  <title>SeedTech</title>
+  <title>Seed</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
   <!--Browser Theming for Chrome, Firefox, Opera + Windows Phone + iOS Safari-->
@@ -18,10 +18,10 @@
 <script src="js/index.js"></script>
 <div class="boxcontainer clickable">
   <div class="box clickable" id="box" style="display: block;">
-    <h1 class="title unclickable">SeedTech</h1>
+    <h1 class="title unclickable">Seed</h1>
     <p class="desc">
       <span id="desc1" style="color: #4087ED">developer</span>;
-      <span id="desc2" style="color: #ac39ac"><br>memer</span>;
+      <span id="desc2" style="color: #ac39ac"><br>exploiter (shh)</span>;
       <span id="desc3" style="color: #dc3b3b">idiot</span>;
       <span id="desc4" class="unclickable" style="color: #00aba5" onclick="location='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">and more</span>;</p>
     <a href="mailto:admin@seedtech.dev" target="_blank">
@@ -59,16 +59,16 @@
           </svg>
         </div>
       </a>
-      <a href="https://youtube.com/c/SeedTech" target="_blank">
-        <div class="linksquare unclickable" title="YouTube Channel">
+      <a href="https://youtube.com/@Seed" target="_blank">
+        <div class="linksquare unclickable" title="YouTube">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 88.392">
             <title>Main Channel</title>
             <path class="cls-1" d="M64,0S37.076.2,19.2,1.406c-2.427.2-7.945.4-12.8,5.223C2.427,10.447,1.324,19.085,1.324,19.085A183.206,183.206,0,0,0,0,39.575v9.442a177.331,177.331,0,0,0,1.324,20.29S2.648,77.946,6.4,81.763c4.855,5.022,11.256,4.821,14.125,5.424,10.152,1,43.476,1.2,43.476,1.2s26.924,0,44.8-1.406c2.427-.2,7.945-.4,12.8-5.223,3.752-3.817,5.076-12.455,5.076-12.455A182.034,182.034,0,0,0,128,49.017V39.575a183.211,183.211,0,0,0-1.324-20.491S125.352,10.446,121.6,6.63c-4.855-5.022-10.373-5.022-12.8-5.223C90.924.2,64,0,64,0ZM49.362,24.95,84.774,44.64l-35.412,18.8V24.95Z" />
           </svg>
         </div>
       </a>
-	 <a href="https://youtube.com/c/0" target="_blank">
-        <div class="linksquare unclickable" title="0 Character">
+	 <a href="https://youtube.com/user/3" target="_blank">
+        <div class="linksquare unclickable" title="3">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 88.392">
             <title>Second Channel</title>
             <path class="cls-1" d="M64,0S37.076.2,19.2,1.406c-2.427.2-7.945.4-12.8,5.223C2.427,10.447,1.324,19.085,1.324,19.085A183.206,183.206,0,0,0,0,39.575v9.442a177.331,177.331,0,0,0,1.324,20.29S2.648,77.946,6.4,81.763c4.855,5.022,11.256,4.821,14.125,5.424,10.152,1,43.476,1.2,43.476,1.2s26.924,0,44.8-1.406c2.427-.2,7.945-.4,12.8-5.223,3.752-3.817,5.076-12.455,5.076-12.455A182.034,182.034,0,0,0,128,49.017V39.575a183.211,183.211,0,0,0-1.324-20.491S125.352,10.446,121.6,6.63c-4.855-5.022-10.373-5.022-12.8-5.223C90.924.2,64,0,64,0ZM49.362,24.95,84.774,44.64l-35.412,18.8V24.95Z" />
@@ -90,15 +90,6 @@
           </svg>
         </div>
       </a>
-      <a href="https://github.com/SeedTechMC" target="_blank">
-        <div class="linksquare unclickable" title="GitHub">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 123.56 120.47">
-            <title>GitHub</title>
-            <path class="cls-1" d="M41.33,97c0,.5-.58.9-1.3.9s-1.39-.33-1.39-.9.57-.9,1.29-.9S41.33,96.43,41.33,97Zm-7.75-1.12c-.17.5.32,1.07,1.07,1.22a1.16,1.16,0,0,0,1.54-.5c.15-.5-.32-1.07-1.07-1.29a1.27,1.27,0,0,0-1.54.57Zm11-.42c-.72.17-1.22.64-1.15,1.22s.73.82,1.47.65,1.22-.65,1.15-1.15S45.31,95.38,44.59,95.46ZM61,0C26.43,0,0,26.23,0,60.78c0,27.63,17.39,51.27,42.22,59.59,3.19.57,4.31-1.4,4.31-3s-.07-10.06-.07-15.29c0,0-17.44,3.73-21.1-7.42,0,0-2.84-7.25-6.93-9.12,0,0-5.7-3.91.4-3.84a13.15,13.15,0,0,1,9.62,6.43c5.45,9.61,14.6,6.85,18.16,5.2a13.84,13.84,0,0,1,4-8.39c-13.92-1.54-28-3.56-28-27.53,0-6.85,1.89-10.28,5.88-14.67-.65-1.62-2.77-8.29.65-16.91,5.2-1.62,17.18,6.72,17.18,6.72a59.06,59.06,0,0,1,31.29,0s12-8.37,17.19-6.72c3.41,8.64,1.29,15.29.65,16.91,4,4.41,6.42,7.85,6.42,14.67,0,24-14.67,26-28.59,27.53,2.29,2,4.23,5.7,4.23,11.56,0,8.39-.07,18.78-.07,20.82,0,1.62,1.14,3.59,4.31,3,24.91-8.27,41.8-31.91,41.8-59.54C123.56,26.23,95.53,0,61,0ZM24.21,85.92c-.32.25-.25.82.18,1.29s1,.57,1.29.25.25-.82-.17-1.29S24.54,85.59,24.21,85.92Zm-2.69-2c-.17.32.08.72.58,1a.75.75,0,0,0,1.07-.17c.17-.33-.08-.73-.58-1A.94.94,0,0,0,21.52,83.9Zm8.07,8.87c-.39.32-.25,1.07.33,1.54s1.29.65,1.62.25.17-1.07-.33-1.54S29.92,92.37,29.59,92.77ZM26.75,89.1c-.39.25-.39.9,0,1.47s1.08.83,1.4.58a1.14,1.14,0,0,0,0-1.55c-.35-.57-1-.82-1.4-.5Z"/>
-          </svg>
-        </div>
-      </a>
-    </div>
   </div>
 </div>
 </body>
