--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
   <!--Browser Theming for Chrome, Firefox, Opera + Windows Phone + iOS Safari-->
-  <meta name="theme-color" content="#37383F">
-  <meta name="msapplication-navbutton-color" content="#37383F">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#37383F">
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-navbutton-color" content="#000000">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
 </head>
 
 <body onload="EasterEgg()">
@@ -20,10 +20,10 @@
   <div class="box clickable" id="box" style="display: block;">
     <h1 class="title unclickable">Seed</h1>
     <p class="desc">
-      <span id="desc1" style="color: #4087ED">developer</span>;
-      <span id="desc2" style="color: #ac39ac"><br>exploiter (shh)</span>;
-      <span id="desc3" style="color: #dc3b3b">idiot</span>;
-      <span id="desc4" class="unclickable" style="color: #00aba5" onclick="location='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">and more</span>;</p>
+      <span id="desc1" style="color: #ff5500">Developer</span>,
+      <span id="desc2" class="unclickable" style="color: #00ff00" onclick="location='https://software.com'">Exploiter</span>,
+      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://software.com'">Professional Idiot</span>.
+      
     <a href="mailto:admin@seedtech.dev" target="_blank">
       <p class="link unclickable">admin@seedtech.dev</p>
     </a>
@@ -31,22 +31,22 @@
       <a href="http://steamcommunity.com/id/SeedTech" target="_blank">
         <div class="linksquare" title="Steam">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.789 127.926">
-            <title>Steam</title>
+            <title></title>
             <path class="cls-1" d="M63.826,0A63.971,63.971,0,0,0,0,59.713l.028.047v-.009L34.4,73.9A17.793,17.793,0,0,1,44.884,71L60.536,48.26c-.006-.1-.006-.209-.006-.316A24.3,24.3,0,1,1,84.825,72.287c-.181,0-.368-.006-.549-.011l-22.395,16a17.731,17.731,0,0,1-35.038,4.332L2.63,82.621A63.97,63.97,0,1,0,63.826,0Zm21.8,31.75A16.216,16.216,0,1,0,101,47.181,16.219,16.219,0,0,0,85.629,31.75Zm-.775,3.985A12.182,12.182,0,1,1,72.7,47.919,12.174,12.174,0,0,1,84.853,35.735ZM44.289,75.048a13.711,13.711,0,0,0-4.972.9l8.177,3.388a10.088,10.088,0,0,1-7.75,18.629l-7.909-3.278A13.682,13.682,0,1,0,44.289,75.048Z" />
           </svg>
         </div>
       </a>
-      <a href="https://twitter.com/SeedTechTV" target="_blank">
-        <div class="linksquare unclickable" title="Twitter">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.577 91.032">
-            <title>Twitter</title>
-            <path class="cls-1" d="M39.77,102.75c47.72,0,73.82-39.53,73.82-73.82,0-1.12,0-2.24-.08-3.35a52.83,52.83,0,0,0,12.95-13.43,51.83,51.83,0,0,1-14.91,4.08A26,26,0,0,0,123,1.88a52.1,52.1,0,0,1-16.47,6.3A26,26,0,0,0,62.27,31.84,73.68,73.68,0,0,1,8.8,4.73a26,26,0,0,0,8,34.64A25.84,25.84,0,0,1,5.06,36.12v.33A25.94,25.94,0,0,0,25.87,61.88a25.89,25.89,0,0,1-11.71.45,26,26,0,0,0,24.24,18A52.09,52.09,0,0,1,6.18,91.47,53.11,53.11,0,0,1,0,91.1a73.46,73.46,0,0,0,39.77,11.63"/>          </svg>
+      <a href="https://x.com/SeedTechTV" target="_blank">
+        <div class="linksquare unclickable" title="X">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.577 -1">
+            <title></title>
+            <path class="cls-1" d="M14.258 10.152L23.176 0h-2.113l-7.747 8.813L7.133 0H0l9.352 13.328L0 23.973h2.113l8.176-9.309 6.531 9.309h7.133zm-2.895 3.293l-.949-1.328L2.875 1.56h3.246l6.086 8.523.945 1.328 7.91 11.078h-3.246zm0 0"/>          </svg>
         </div>
       </a>
       <a href="https://instagram.com/SeedTe.ch" target="_blank">
         <div class="linksquare unclickable" title="Instagram">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 116.32 116.32">
-            <title>Instagram</title>
+            <title></title>
             <path id="path14" class="cls-1" d="M58.16,0c-15.8,0-17.78.07-24,.35a42.85,42.85,0,0,0-14.12,2.7A28.61,28.61,0,0,0,9.76,9.76a28.61,28.61,0,0,0-6.71,10.3A42.85,42.85,0,0,0,.35,34.18c-.28,6.2-.35,8.18-.35,24s.07,17.77.35,24a42.79,42.79,0,0,0,2.7,14.11,29.69,29.69,0,0,0,17,17A42.83,42.83,0,0,0,34.18,116c6.2.28,8.18.35,24,.35s17.77-.07,24-.35a42.76,42.76,0,0,0,14.11-2.71,29.61,29.61,0,0,0,17-17A42.76,42.76,0,0,0,116,82.14c.28-6.21.35-8.19.35-24s-.07-17.78-.35-24a42.83,42.83,0,0,0-2.71-14.12,29.69,29.69,0,0,0-17-17A42.79,42.79,0,0,0,82.14.35C75.93.07,74,0,58.16,0Zm0,10.48c15.53,0,17.37.06,23.5.34a32.15,32.15,0,0,1,10.8,2,19.24,19.24,0,0,1,11,11,32.41,32.41,0,0,1,2,10.8c.28,6.13.34,8,.34,23.5s-.06,17.37-.34,23.5a32.41,32.41,0,0,1-2,10.8,19.24,19.24,0,0,1-11,11,32.41,32.41,0,0,1-10.8,2c-6.13.28-8,.34-23.5.34s-17.37-.06-23.5-.34a32.41,32.41,0,0,1-10.8-2,19.24,19.24,0,0,1-11-11,32.15,32.15,0,0,1-2-10.8c-.28-6.13-.34-8-.34-23.5s.06-17.37.34-23.5a32.15,32.15,0,0,1,2-10.8,18.15,18.15,0,0,1,4.35-6.69,18.15,18.15,0,0,1,6.69-4.35,32.15,32.15,0,0,1,10.8-2c6.13-.28,8-.34,23.5-.34"/><path id="path16" class="cls-1" d="M58.16,77.54A19.39,19.39,0,1,1,77.54,58.16,19.39,19.39,0,0,1,58.16,77.54Zm0-49.25A29.87,29.87,0,1,0,88,58.16,29.87,29.87,0,0,0,58.16,28.29"/><path id="path18" class="cls-1" d="M96.18,27.11a7,7,0,1,1-7-7,7,7,0,0,1,7,7"/>
           </svg>
         </div>
@@ -54,7 +54,7 @@
       <a href="https://discord.gg/69-1000559130441941002" target="_blank">
         <div class="linksquare unclickable" title="Discord">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.56 96.47">
-            <title>Discord</title>
+            <title></title>
             <path class="cls-1" d="M107.14,8A104.31,104.31,0,0,0,81.38,0,.38.38,0,0,0,81,.2a70.11,70.11,0,0,0-3.21,6.59,96.81,96.81,0,0,0-28.94,0A68.21,68.21,0,0,0,45.57.2.41.41,0,0,0,45.15,0,103.6,103.6,0,0,0,19.39,8a.39.39,0,0,0-.17.14C2.81,32.66-1.68,56.57.52,80.18a.44.44,0,0,0,.17.3,104.89,104.89,0,0,0,31.6,16,.43.43,0,0,0,.45-.14A75.49,75.49,0,0,0,39.2,85.79a.4.4,0,0,0-.22-.56,69.25,69.25,0,0,1-9.87-4.7.41.41,0,0,1,0-.68c.66-.49,1.33-1,2-1.53a.38.38,0,0,1,.41-.06,74.81,74.81,0,0,0,63.6,0,.42.42,0,0,1,.42,0c.63.52,1.3,1,2,1.54a.41.41,0,0,1,0,.68,64.84,64.84,0,0,1-9.88,4.7.4.4,0,0,0-.21.56A83.83,83.83,0,0,0,93.76,96.3a.4.4,0,0,0,.44.15,104.54,104.54,0,0,0,31.65-16,.4.4,0,0,0,.17-.29c2.64-27.31-4.42-51-18.71-72A.35.35,0,0,0,107.14,8ZM42.29,65.8c-6.23,0-11.37-5.72-11.37-12.75s5-12.76,11.37-12.76,11.48,5.77,11.38,12.76S48.63,65.8,42.29,65.8Zm42.06,0C78.11,65.8,73,60.08,73,53.05s5-12.76,11.38-12.76,11.47,5.77,11.37,12.76S90.73,65.8,84.35,65.8Z" />
           </svg>
         </div>
@@ -62,16 +62,16 @@
       <a href="https://youtube.com/@Seed" target="_blank">
         <div class="linksquare unclickable" title="YouTube">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 88.392">
-            <title>Main Channel</title>
+            <title></title>
             <path class="cls-1" d="M64,0S37.076.2,19.2,1.406c-2.427.2-7.945.4-12.8,5.223C2.427,10.447,1.324,19.085,1.324,19.085A183.206,183.206,0,0,0,0,39.575v9.442a177.331,177.331,0,0,0,1.324,20.29S2.648,77.946,6.4,81.763c4.855,5.022,11.256,4.821,14.125,5.424,10.152,1,43.476,1.2,43.476,1.2s26.924,0,44.8-1.406c2.427-.2,7.945-.4,12.8-5.223,3.752-3.817,5.076-12.455,5.076-12.455A182.034,182.034,0,0,0,128,49.017V39.575a183.211,183.211,0,0,0-1.324-20.491S125.352,10.446,121.6,6.63c-4.855-5.022-10.373-5.022-12.8-5.223C90.924.2,64,0,64,0ZM49.362,24.95,84.774,44.64l-35.412,18.8V24.95Z" />
           </svg>
         </div>
       </a>
 	 <a href="https://youtube.com/user/3" target="_blank">
         <div class="linksquare unclickable" title="3">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 88.392">
-            <title>Second Channel</title>
-            <path class="cls-1" d="M64,0S37.076.2,19.2,1.406c-2.427.2-7.945.4-12.8,5.223C2.427,10.447,1.324,19.085,1.324,19.085A183.206,183.206,0,0,0,0,39.575v9.442a177.331,177.331,0,0,0,1.324,20.29S2.648,77.946,6.4,81.763c4.855,5.022,11.256,4.821,14.125,5.424,10.152,1,43.476,1.2,43.476,1.2s26.924,0,44.8-1.406c2.427-.2,7.945-.4,12.8-5.223,3.752-3.817,5.076-12.455,5.076-12.455A182.034,182.034,0,0,0,128,49.017V39.575a183.211,183.211,0,0,0-1.324-20.491S125.352,10.446,121.6,6.63c-4.855-5.022-10.373-5.022-12.8-5.223C90.924.2,64,0,64,0ZM49.362,24.95,84.774,44.64l-35.412,18.8V24.95Z" />
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 110 400 150.392">
+            <title></title>
+            <path class="cls-1" d="M97.852 25.195 L 97.852 39.453 83.350 39.453 L 68.848 39.453 68.848 68.652 L 68.848 97.852 83.350 97.852 L 97.852 97.852 97.852 112.451 L 97.852 127.051 112.451 127.051 L 127.051 127.051 127.051 141.504 L 127.051 155.957 112.451 155.957 L 97.852 155.957 97.852 185.205 L 97.852 214.453 112.451 214.453 L 127.051 214.453 127.051 228.906 L 127.051 243.359 112.451 243.359 L 97.852 243.359 97.852 257.959 L 97.852 272.559 83.350 272.559 L 68.848 272.559 68.848 301.758 L 68.848 330.957 83.350 330.957 L 97.852 330.957 97.852 345.557 L 97.852 360.156 112.451 360.156 L 127.051 360.156 127.051 374.658 L 127.051 389.160 200.000 389.160 L 272.949 389.160 272.949 374.658 L 272.949 360.156 287.549 360.156 L 302.148 360.156 302.148 345.557 L 302.148 330.957 316.650 330.957 L 331.152 330.957 331.152 258.008 L 331.152 185.059 316.650 185.059 L 302.148 185.059 302.148 170.605 L 302.148 156.152 316.650 156.152 L 331.152 156.152 331.152 112.305 L 331.152 68.457 316.650 68.457 L 302.148 68.457 302.148 53.955 L 302.148 39.453 287.549 39.453 L 272.949 39.453 272.949 25.195 L 272.949 10.938 185.400 10.938 L 97.852 10.938 97.852 25.195 M272.827 97.778 L 272.803 156.006 258.227 156.031 L 243.652 156.055 243.676 170.630 L 243.701 185.205 258.276 185.230 L 272.852 185.255 272.827 243.482 L 272.803 301.709 258.228 301.734 L 243.652 301.758 243.652 316.309 L 243.652 330.859 170.850 330.859 L 98.047 330.859 98.047 301.758 L 98.047 272.656 156.323 272.632 L 214.600 272.607 214.626 243.652 C 214.641 227.727,214.629 214.598,214.600 214.478 L 214.547 214.258 170.848 214.258 L 127.148 214.258 127.148 185.156 L 127.148 156.055 170.874 156.030 L 214.600 156.006 214.600 126.904 L 214.600 97.803 156.323 97.778 L 98.047 97.754 98.047 68.652 L 98.047 39.551 185.449 39.551 L 272.852 39.551 272.827 97.778" />
           </svg>
         </div>
       </a>
