--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1 class="title unclickable">Seed</h1>
     <p class="desc">
       <span id="desc1" style="color: #ff5500">Developer</span>,
-      <span id="desc2" class="unclickable" style="color: #00ff00" onclick="location='https://software.com'">Exploiter</span>,
-      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://software.com'">Professional Idiot</span>.
+      <span id="desc2" class="unclickable" style="color: #00ff00" onclick="location='https://www.SeedTech.tv/Exploit'">Exploiter</span>,
+      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://youtube.com/watch?v-W296eUQz_yw">Professional Idiot</span>.
       
     <a href="mailto:admin@seedtech.dev" target="_blank">
       <p class="link unclickable">admin@seedtech.dev</p>
