--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="assets/Icon.png" type="image/x-icon">
+<link rel="icon" href="assets/Icon.png" type="image/x-icon">
 <head>
   <meta charset="UTF-8">
   <title>Seed</title>
