--- a/Guidlines.html
+++ b/Guidlines.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moral & Ethical Guidelines</title>
-    <link rel="icon" href="Icon.png" type="image/png">
+    <link rel="icon" href="assets/Gold.png" type="image/png">
     <style>
         body {
             background-color: #1a1a1a; /* Dark background color */
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-  <h1><img src="Icon.png" alt="Icon">Moral &amp; Ethical Guidelines for Business.</h1>
+  <h1><img src="assets/Gold.png" alt="Icon">Moral &amp; Ethical Guidelines for Business.</h1>
   <p>- No gambling content or channels.</p>
   <p>- No sexual or explicit content.</p>
   <p>- No illegal content, or content promoting illegal activity.</p>
