--- a/notepad.html
+++ b/notepad.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/Icon.png" type="image/x-icon">
+  <link rel="icon" href="assets/Icon.png" type="image/x-icon">
 	<title>Notepad</title>
 	
 	<style type="text/css">
