--- a/Guidelines.html
+++ b/Guidelines.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="assets/Gold.png" type="image/png">
     <style>
         body {
-            background-color: #1a1a1a; /* Dark background color */
-            color: #ffffff; /* Light text color */
-            font-family: 'CustomFont', sans-serif; /* Replace 'CustomFont' with the actual font name */
+            background-color: #1a1a1a; 
+            color: #ffffff; 
+            font-family: 'font.ttf', sans-serif; 
             text-align: center;
             margin: 0;
             padding: 0;
@@ -20,22 +20,22 @@
 
         h1 {
             font-size: 2em;
-            margin-bottom: 10px; /* Adjust as needed */
+            margin-bottom: 10px; 
         }
 
         h1 img {
-            margin-right: 10px; /* Adjust as needed */
-            height: 30px; /* Adjust as needed */
+            margin-right: 10px; 
+            height: 30px; 
         }
 
         p {
             font-size: 1.2em;
-            margin-bottom: 10px; /* Adjust as needed */
+            margin-bottom: 10px;
         }
 
         .small-text {
             font-size: 0.8em;
-            margin-top: auto; /* Push to the bottom */
+            margin-top: auto;
             font-style: italic;
         }
     </style>
