--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Seed</title>
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-  <!--Browser Theming for Chrome, Firefox, Opera + Windows Phone + iOS Safari-->
   <meta name="theme-color" content="#000000">
   <meta name="msapplication-navbutton-color" content="#000000">
   <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
@@ -21,8 +20,8 @@
     <h1 class="title unclickable">Seed</h1>
     <p class="desc">
       <span id="desc1" style="color: #ff5500">Developer</span>,
-      <span id="desc2" class="unclickable" style="color: #00ff00" onclick="location='https://www.SeedTech.tv/Exploit'">Exploiter</span>,
-      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://youtube.com/watch?v-W296eUQz_yw">Professional Idiot</span>.
+      <span id="desc2" style="color: #00ff00">Bug Hunter</span>,
+      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://SeedTe.ch/qwHX6w">Professional Idiot</span>.
       
     <a href="mailto:admin@seedtech.dev" target="_blank">
       <p class="link unclickable">admin@seedtech.dev</p>
