--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p class="desc">
       <span id="desc1" style="color: #ff5500">Developer</span>,
       <span id="desc2" style="color: #00ff00">Bug Hunter</span>,
-      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://SeedTe.ch/qwHX6w">Professional Idiot</span>.
+      <br>& <span id="desc3" class="unclickable" style="color: #ff0000" onclick="location='https://www.youtube.com/watch?v=hiRacdl02w4">Professional Idiot</span>.
       
     <a href="mailto:admin@seedtech.dev" target="_blank">
       <p class="link unclickable">admin@seedtech.dev</p>
